--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "three": "^0.165.0"
   },
   "devDependencies": {
     "@types/node": "^20",
